[#2043] to unify alignment of text of the latest comment in the issues page

--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -207,8 +207,8 @@ a.bluelink{
   box-shadow:  1px 1px rgba(0, 0, 0, 0.05);
 }
 
-.row-fluid .marleft0{
-  margin-left: 0px;
+.row-fluid .padright22{
+  padding-right: 22px;
 }
 
 @media (min-width: 1200px) { 
