--- a/app/assets/stylesheets/wiki.css.scss
+++ b/app/assets/stylesheets/wiki.css.scss
@@ -44,3 +44,7 @@ h3:hover a.wiki-anchor {
   display: inline;
   color: #ddd;
 }
+
+.wiki{
+  word-wrap: break-word;
+}
